# instagram-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  __init__.py  agents.py  batch_runner.py  cache.py  client.py  cookie_manager.py  docker-compose.yml  exceptions.py  instagram-mcp.mcpb  manifest.json  models.py  parser.py  proxy_manager.py  pyproject.toml  pytest.ini  rate_limiter.py  requirements.txt  smithery.yaml  tools.py
.github/workflows/: ci.yml  docker.yml  publish.yml
.well-known/mcp/: server-card.json
instagram_mcp/: __init__.py  __main__.py  _path_guard.py  account_pool.py  agents.py  batch_runner.py  challenge.py  client.py  config.py  cookie_health.py  cookie_manager.py  delay.py  exceptions.py  exporter.py  fingerprint.py  formatter.py  health.py  idempotency.py  log_config.py  media_cache.py  metrics.py  middleware.py  models.py  monitor.py  oauth_manager.py  parser.py  plugins.py  proxy_manager.py  rate_limiter.py  scheduler.py  session_manager.py  shadow_ban.py  state_store.py  tools.py  tracing.py
instagram_mcp/client/: __init__.py  _base.py  _content.py  _dm.py  _feed.py  _interactions.py  _profile.py  _retry.py  _sessions.py  _social.py  _threads.py  _upload.py  _utils.py
instagram_mcp/tools/: __init__.py  _audit.py  _helpers.py  _instructions.py  analysis.py  audience.py  automation.py  content.py  dm.py  profile.py  server.py  social_graph.py  upload.py
scripts/: check_no_secrets.py  generate_metadata.py  regenerate_server_card.py
tests/: _diag_anon.py  conftest.py  test_account_pool.py  test_agents.py  test_analyze_comments.py  test_audience_tools.py  test_batch_runner.py  test_cache.py  test_challenge.py  test_ci_workflow.py  test_client.py  test_config.py  test_cookie_health.py  test_cookie_manager.py  test_csv_export.py  test_dm_tools.py  test_dockerfile.py  test_dockerignore.py  test_docstring_inventory.py  test_exceptions.py  test_exporter.py  test_final_push.py  test_fingerprint.py  test_formatter.py  test_gitignore.py  test_lazy_imports.py  test_live_anonymous_full.py  test_log_redaction.py  test_media_cache.py  test_metadata_sync.py  test_metrics.py  test_middleware.py  test_models.py  test_monitor.py  test_new_tools.py  test_no_inline_tool_decorators.py  test_oauth_manager.py  test_parser.py  test_parser_extra.py  test_plugins.py  (+17 more)
tests/properties/: test_error_taxonomy.py  test_instructions_builder.py  test_orchestrator_gating.py  test_path_guard.py  test_secret_scan_hook.py
(+15 files in other folders)
