[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instagram-mcp"
version = "1.0.0"
description = "Production-grade MCP server for Instagram data — no login required"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp[cli]>=1.0.0",
    "curl-cffi>=0.7.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0",
    "Pillow>=10.0.0",
    'uvloop>=0.20; sys_platform != "win32"',
]

[project.scripts]
instagram-mcp = "instagram_mcp:run_server"

[tool.setuptools.packages.find]
where = ["."]
include = ["instagram_mcp*"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
